Digital Clock Project

--- a/7_DOM_Projects/BMICalculator/index.html
+++ b/7_DOM_Projects/BMICalculator/index.html
@@ -22,6 +22,7 @@
             <input type="text" placeholder="Enter weight" id="weightTextBox"></p>
             <button id="calculate"> calculate </button>
             <label>Result:</label><output id="result">0</output>
+           <br> <output id="report"></output>
         
 
         <h3>BMI Guide</h3>
