--- a/7_DOM_Projects/index.html
+++ b/7_DOM_Projects/index.html
@@ -17,7 +17,7 @@
            <a class="colorSwitcherLink " href="ColorSwitcher/index.html" >Color Switcher Project</a>
            <a class="BMICalculatorLink " href="BMICalculator/index.html" >BMI Caculator Project</a>
             <a class ="DigitalClockLink" href="DigitalClock/index.html"> Digital Clock</a>
-    
+            <a class="GuessNumberLink" href="NumberGuessGame/index.html">Guess The Number Game</a>
         </div>
 
     </main>
