Background Color Changer project

--- a/7_DOM_Projects/index.html
+++ b/7_DOM_Projects/index.html
@@ -18,6 +18,7 @@
            <a class="BMICalculatorLink " href="BMICalculator/index.html" >BMI Caculator Project</a>
             <a class ="DigitalClockLink" href="DigitalClock/index.html"> Digital Clock</a>
             <a class="GuessNumberLink" href="NumberGuessGame/index.html">Guess The Number Game</a>
+            <a class = "colorChangeLink" href="BackGroundColorChange/index.html">Background Color Changer</a>
         </div>
 
     </main>
